--- a/HomePage.html
+++ b/HomePage.html
@@ -25,7 +25,7 @@
 
 <main>
 
-    <div class="Galeria Kryesore">
+    <div class="gallery">
         <div class="art-item">
             <img src="Piktura.jpeg" alt="Foto 1">
             <div class="art-caption">Piktura</div>
@@ -41,7 +41,7 @@
     </div>
 
 
-    <section class="Seksioni i Artisteve">
+    <section class="artists-section">
         <h2>Artist</h2>
         <div class="artists-container">
             <button class="artist">
@@ -72,7 +72,7 @@
     </section>
 
     <!-- Seksioni Vepra -->
-    <section class="Seksioni i Veprave">
+    <section class="works-section">
         <h2>Vepra</h2>
         <div class="works-container">
             <!-- Kutitë e veprave -->
