shtimi i veprave ne profilin e artistit

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -23,7 +23,7 @@
     <input id="email" placeholder="Email">
     <input id="password" placeholder="Password">
     <select id="role">
-        <option value="client">Client</option>
+        <option value="klient">Klient</option>
         <option value="artist">Artist</option>
     </select>
     <button onclick="addUser()">Add User</button>
@@ -38,10 +38,10 @@
             <thead>
             <tr>
                 <th>ID</th>
-                <th>Name</th>
-                <th>Surname</th>
+                <th>Emri</th>
+                <th>Mbiemri</th>
                 <th>Email</th>
-                <th>Role</th>
+                <th>Roli</th>
                 <th>Actions</th>
             </tr>
             </thead>
